syntax = "proto3";

package validatorstate;

import "google/protobuf/empty.proto";

option go_package = "github.com/ava-labs/avalanchego/proto/pb/validatorstate";

service ValidatorState {
  // GetMinimumHeight returns the minimum height of the blocks in the optimal
  // proposal window.
  rpc GetMinimumHeight(google.protobuf.Empty) returns (GetMinimumHeightResponse);
  // GetCurrentHeight returns the current height of the P-chain.
  rpc GetCurrentHeight(google.protobuf.Empty) returns (GetCurrentHeightResponse);
  // GetSubnetID returns the subnetID of the provided chain.
  rpc GetSubnetID(GetSubnetIDRequest) returns (GetSubnetIDResponse);
  // GetWarpValidatorSets returns the canonical warp validator set for all
  // subnets at the requested P-chain height. If a subnet doesn't have a valid
  // canonical warp validator set, it is omitted from the response.
  rpc GetWarpValidatorSets(GetWarpValidatorSetsRequest) returns (GetWarpValidatorSetsResponse);
  // GetWarpValidatorSet returns the canonical warp validator set for the
  // provided subnet at the requested P-chain height. If the subnet doesn't have
  // a valid canonical warp validator set, either the returned set will be empty
  // or an error may occur.
  rpc GetWarpValidatorSet(GetWarpValidatorSetRequest) returns (GetWarpValidatorSetResponse);
  // GetValidatorSet returns the weights of the nodeIDs for the provided
  // subnet at the requested P-chain height.
  rpc GetValidatorSet(GetValidatorSetRequest) returns (GetValidatorSetResponse);
  // GetCurrentValidatorSet returns the validator set for the provided subnet at
  // the current P-chain height.
  rpc GetCurrentValidatorSet(GetCurrentValidatorSetRequest) returns (GetCurrentValidatorSetResponse);
}

message GetMinimumHeightResponse {
  uint64 height = 1;
}

message GetCurrentHeightResponse {
  uint64 height = 1;
}

message GetSubnetIDRequest {
  bytes chain_id = 1;
}

message GetSubnetIDResponse {
  bytes subnet_id = 1;
}

message GetWarpValidatorSetsRequest {
  uint64 height = 1;
}

message GetWarpValidatorSetRequest {
  uint64 height = 1;
  bytes subnet_id = 2;
}

message GetValidatorSetRequest {
  uint64 height = 1;
  bytes subnet_id = 2;
}

message GetCurrentValidatorSetRequest {
  bytes subnet_id = 1;
}

message Validator {
  bytes node_id = 1;
  uint64 weight = 2;
  bytes public_key = 3; // Uncompressed public key, can be empty
  uint64 start_time = 4; // can be empty
  uint64 min_nonce = 5; // can be empty
  bool is_active = 6; // can be empty
  bytes validation_id = 7; // can be empty
  bool is_l1_validator = 8; // can be empty
}

message GetWarpValidatorSetsResponse {
  repeated WarpValidatorSet validator_sets = 1;
}

message GetWarpValidatorSetResponse {
  uint64 total_weight = 1;
  repeated WarpValidator validators = 2;
}

message WarpValidatorSet {
  bytes subnet_id = 1;
  uint64 total_weight = 2;
  repeated WarpValidator validators = 3;
}

message WarpValidator {
  bytes public_key = 1; // Uncompressed public key, must not be empty
  uint64 weight = 2;
  repeated bytes node_ids = 3; // must not be empty
}

message GetValidatorSetResponse {
  repeated Validator validators = 1;
}

message GetCurrentValidatorSetResponse {
  repeated Validator validators = 1;
  uint64 current_height = 2;
}
